--- a/qr.html
+++ b/qr.html
@@ -15,30 +15,44 @@ section{
   padding:20px;
   border-radius:12px;
   border:3px solid #8b6b3e;
-}
-a{
-  display:block;
-  margin:10px 0;
-  padding:14px;
-  background:#cbb26a;
-  border-radius:10px;
-  text-decoration:none;
-  color:black;
-  font-weight:bold;
   text-align:center;
 }
+.qr-block{
+  margin:20px 0;
+}
+.qr-block img{
+  width:180px;
+  height:180px;
+}
+h2{margin-bottom:10px;}
 </style>
 </head>
 <body>
 
 <section>
 <h2>QR-коды станций</h2>
-<p>Эти ссылки используй для генерации QR-кодов:</p>
+<p>Ученики сканируют QR и переходят на задание</p>
 
-<a href="station1.html">🗿 Станция 1</a>
-<a href="station2.html">💻 Станция 2</a>
-<a href="station3.html">🎧 Станция 3</a>
-<a href="station4.html">🔐 Станция 4</a>
+<div class="qr-block">
+  <h3>🗿 Станция 1</h3>
+  <img src="http://qrcoder.ru/code/?https%3A%2F%2Fpikulinartem8-cell.github.io%2Fcode-of-the-steppe%2Fstation1.html&4&0">
+</div>
+
+<div class="qr-block">
+  <h3>💻 Станция 2</h3>
+  <img src="http://qrcoder.ru/code/?https%3A%2F%2Fpikulinartem8-cell.github.io%2Fcode-of-the-steppe%2Fstation2.html&4&0">
+</div>
+
+<div class="qr-block">
+  <h3>🎧 Станция 3</h3>
+  <img src="http://qrcoder.ru/code/?https%3A%2F%2Fpikulinartem8-cell.github.io%2Fcode-of-the-steppe%2Fstation3.html&4&0">
+</div>
+
+<div class="qr-block">
+  <h3>🔐 Станция 4</h3>
+  <img src="http://qrcoder.ru/code/?https%3A%2F%2Fpikulinartem8-cell.github.io%2Fcode-of-the-steppe%2Fstation4.html&4&0">
+</div>
+
 </section>
 
 </body>
