--- a/qr.html
+++ b/qr.html
@@ -35,25 +35,26 @@ h2{margin-bottom:10px;}
 
 <div class="qr-block">
   <h3>🗿 Станция 1</h3>
-  <img src="http://qrcoder.ru/code/?https%3A%2F%2Fpikulinartem8-cell.github.io%2Fcode-of-the-steppe%2Fstation1.html&4&0">
+ <img src="qr/station1.png">
 </div>
 
 <div class="qr-block">
   <h3>💻 Станция 2</h3>
-  <img src="http://qrcoder.ru/code/?https%3A%2F%2Fpikulinartem8-cell.github.io%2Fcode-of-the-steppe%2Fstation2.html&4&0">
+  <img src="qr/station2.png">
 </div>
 
 <div class="qr-block">
   <h3>🎧 Станция 3</h3>
-  <img src="http://qrcoder.ru/code/?https%3A%2F%2Fpikulinartem8-cell.github.io%2Fcode-of-the-steppe%2Fstation3.html&4&0">
+  <img src="qr/station3.png">
 </div>
 
 <div class="qr-block">
   <h3>🔐 Станция 4</h3>
-  <img src="http://qrcoder.ru/code/?https%3A%2F%2Fpikulinartem8-cell.github.io%2Fcode-of-the-steppe%2Fstation4.html&4&0">
+  <img src="qr/station4.png">
 </div>
 
 </section>
 
 </body>
 </html>
+
