--- a/station1.html
+++ b/station1.html
@@ -2,53 +2,46 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Station 1</title>
+<title>Станция 1</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body{font-family:Arial;background:#f4ecd8;padding:15px;}
-.rune{
-  font-size:36px;
-  letter-spacing:8px;
-  text-align:center;
-  background:#e6d6b3;
-  padding:20px;
-  border-radius:10px;
-  border:3px solid #8b6b3e;
-}
-.option{
-  margin:10px 0;
-  padding:12px;
-  border:2px solid #8b6b3e;
-  border-radius:8px;
-  background:#fff;
-}
+body{font-family:Arial;background:linear-gradient(#f4ecd8,#e2cfa1);padding:15px;}
+section{background:#fffaf0;padding:20px;border-radius:14px;border:3px solid #8b6b3e;}
+.option{padding:12px;margin:8px 0;border:2px solid #8b6b3e;border-radius:8px;background:#fff;cursor:pointer;}
+.option.correct{background:#c7e3b3;border-color:#2e7d32;}
+.option.wrong{background:#f4bcbc;border-color:#b71c1c;}
+.option.disabled{pointer-events:none;opacity:.85;}
+.retry{margin-top:15px;padding:12px;width:100%;border:none;border-radius:10px;background:#d8c48a;font-size:16px;}
 </style>
-<script>
-function check(ok){
-  alert(ok?"✅ Дұрыс!":"❌ Қате, тағы ойлан!");
-}
-</script>
 </head>
 <body>
 
-<h2>🗿 Тайна рунического камня</h2>
-<p>Расшифруй надпись:</p>
+<section>
+<h2>🗿 Станция 1. Камень степи</h2>
+<p>Расшифруй древний знак:</p>
 
-<div class="rune">ᚴAᛉAᚴ</div>
+<div style="font-size:34px;text-align:center;margin:15px 0;">ᚴAᛉAᚴ</div>
 
 <div class="answers">
-  <div class="option" onclick="check(true)">ҚАЗАҚ</div>
-  <div class="option" onclick="check(false)">ҚАЗАҚСТАН</div>
-  <div class="option" onclick="check(false)">ТҮРКІ</div>
+  <div class="option" data-correct="true">ҚАЗАҚ</div>
+  <div class="option" data-correct="false">ҚАЗАҚСТАН</div>
+  <div class="option" data-correct="false">ТҮРКІ</div>
 </div>
 
+<button class="retry" onclick="resetQuiz()">🔁 Попробовать снова</button>
+</section>
 
-  <script>
-document.querySelectorAll('.answers').forEach(block => {
-  const items = Array.from(block.children);
-  items.sort(() => Math.random() - 0.5);
-  items.forEach(i => block.appendChild(i));
-});
+<script>
+let answered=false;
+function shuffle(){document.querySelectorAll('.answers').forEach(b=>{[...b.children].sort(()=>Math.random()-0.5).forEach(i=>b.appendChild(i));});}
+function setup(){
+document.querySelectorAll('.option').forEach(o=>{
+o.onclick=()=>{if(answered)return;answered=true;
+o.classList.add(o.dataset.correct==="true"?"correct":"wrong");
+document.querySelectorAll('.option').forEach(x=>{if(x.dataset.correct==="true")x.classList.add("correct");x.classList.add("disabled");});
+};});}
+function resetQuiz(){answered=false;document.querySelectorAll('.option').forEach(o=>o.className="option");shuffle();setup();}
+shuffle();setup();
 </script>
 
 </body>
