--- a/station2.html
+++ b/station2.html
@@ -2,51 +2,41 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Station 2</title>
+<title>Станция 2</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body{font-family:Arial;background:#f4ecd8;padding:15px;}
-.option{
-  padding:10px;
-  margin:6px 0;
-  border:2px solid #8b6b3e;
-  border-radius:8px;
-  background:#fff;
-}
+body{font-family:Arial;background:linear-gradient(#f4ecd8,#e2cfa1);padding:15px;}
+section{background:#fffaf0;padding:20px;border-radius:14px;border:3px solid #8b6b3e;}
+.option{padding:12px;margin:8px 0;border:2px solid #8b6b3e;border-radius:8px;background:#fff;cursor:pointer;}
+.option.correct{background:#c7e3b3;}
+.option.wrong{background:#f4bcbc;}
+.option.disabled{pointer-events:none;}
+.retry{margin-top:15px;padding:12px;width:100%;background:#d8c48a;border:none;border-radius:10px;}
 </style>
-<script>
-function check(ok){
-  alert(ok?"✅ Дұрыс!":"❌ Қате");
-}
-</script>
 </head>
 <body>
 
-<h2>💻 Слова XXI века</h2>
+<section>
+<h2>💻 Станция 2. Язык XXI века</h2>
+<p>Что означает слово <b>«Смартфон»</b>?</p>
 
-<p><b>Инстаграм</b></p>
-<div class="option" onclick="check(true)">әлеуметтік желі</div>
-<div class="option" onclick="check(false)">ұялы телефон</div>
-
-<p><b>Стартап</b></p>
 <div class="answers">
- <div class="option" onclick="check(true)">кәсіп бастамасы</div>
-  class="option" onclick="check(false)">әлеуметтік желі</div>
+  <div class="option" data-correct="true">ұялы телефон</div>
+  <div class="option" data-correct="false">әлеуметтік желі</div>
+  <div class="option" data-correct="false">кәсіп бастамасы</div>
 </div>
-<p><b>Блогер</b></p>
-<div class="option" onclick="check(true)">желі қолданушы</div>
-<div class="option" onclick="check(false)">ұялы телефон</div>
 
-<p><b>Смартфон</b></p>
-<div class="option" onclick="check(true)">ұялы телефон</div>
-<div class="option" onclick="check(false)">кәсіп бастамасы</div>
+<button class="retry" onclick="resetQuiz()">🔁 Попробовать снова</button>
+</section>
 
-  <script>
-document.querySelectorAll('.answers').forEach(block => {
-  const items = Array.from(block.children);
-  items.sort(() => Math.random() - 0.5);
-  items.forEach(i => block.appendChild(i));
-});
+<script>
+let answered=false;
+function shuffle(){document.querySelectorAll('.answers').forEach(b=>{[...b.children].sort(()=>Math.random()-0.5).forEach(i=>b.appendChild(i));});}
+function setup(){document.querySelectorAll('.option').forEach(o=>{o.onclick=()=>{if(answered)return;answered=true;
+o.classList.add(o.dataset.correct==="true"?"correct":"wrong");
+document.querySelectorAll('.option').forEach(x=>{if(x.dataset.correct==="true")x.classList.add("correct");x.classList.add("disabled");});};});}
+function resetQuiz(){answered=false;document.querySelectorAll('.option').forEach(o=>o.className="option");shuffle();setup();}
+shuffle();setup();
 </script>
 
 </body>
