--- a/station3.html
+++ b/station3.html
@@ -4,23 +4,50 @@
 <meta charset="UTF-8">
 <title>Станция 3</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
-body{font-family:Arial;background:linear-gradient(#f4ecd8,#e2cfa1);padding:15px;}
-section{background:#fffaf0;padding:20px;border-radius:14px;border:3px solid #8b6b3e;}
-.option{padding:12px;margin:8px 0;border:2px solid #8b6b3e;border-radius:8px;background:#fff;cursor:pointer;}
+body{
+  font-family: Arial;
+  background: linear-gradient(#f4ecd8,#e2cfa1);
+  padding: 15px;
+}
+section{
+  background:#fffaf0;
+  padding:20px;
+  border-radius:14px;
+  border:3px solid #8b6b3e;
+  margin-bottom:20px;
+}
+.option{
+  padding:12px;
+  margin:8px 0;
+  border:2px solid #8b6b3e;
+  border-radius:8px;
+  background:#fff;
+  cursor:pointer;
+}
 .option.correct{background:#c7e3b3;}
 .option.wrong{background:#f4bcbc;}
 .option.disabled{pointer-events:none;}
-.retry{margin-top:15px;padding:12px;width:100%;background:#d8c48a;border:none;border-radius:10px;}
+.retry{
+  margin-top:10px;
+  padding:10px;
+  width:100%;
+  background:#d8c48a;
+  border:none;
+  border-radius:10px;
+}
 audio{width:100%;}
 </style>
 </head>
+
 <body>
 
-<section>
 <h2>🎧 Станция 3. Голос степи</h2>
-<p>Кто автор этого произведения?</p>
 
+<!-- ВОПРОС 1 -->
+<section class="quiz">
+<p><b>Кто автор произведения?</b></p>
 <audio controls src="audio/kazakhstan.mp3"></audio>
 
 <div class="answers">
@@ -29,19 +56,74 @@ audio{width:100%;}
   <div class="option" data-correct="false">Құрманғазы</div>
 </div>
 
-<button class="retry" onclick="resetQuiz()">🔁 Попробовать снова</button>
+<button class="retry">🔁 Попробовать снова</button>
+</section>
+
+<!-- ВОПРОС 2 -->
+<section class="quiz">
+<p><b>Какой это тип песни?</b></p>
+<audio controls src="audio/karagym-ai.mp3"></audio>
+
+<div class="answers">
+  <div class="option" data-correct="true">народная</div>
+  <div class="option" data-correct="false">эстрадная</div>
+  <div class="option" data-correct="false">рок</div>
+</div>
+
+<button class="retry">🔁 Попробовать снова</button>
+</section>
+
+<!-- ВОПРОС 3 -->
+<section class="quiz">
+<p><b>Кто автор произведения?</b></p>
+<audio controls src="audio/koshpendiler.mp3"></audio>
+
+<div class="answers">
+  <div class="option" data-correct="true">Ильяс Есенберлин</div>
+  <div class="option" data-correct="false">Мухтар Ауэзов</div>
+  <div class="option" data-correct="false">Сакен Сейфуллин</div>
+</div>
+
+<button class="retry">🔁 Попробовать снова</button>
 </section>
 
 <script>
+document.querySelectorAll('.quiz').forEach(quiz=>{
 let answered=false;
-function shuffle(){document.querySelectorAll('.answers').forEach(b=>{[...b.children].sort(()=>Math.random()-0.5).forEach(i=>b.appendChild(i));});}
-function setup(){document.querySelectorAll('.option').forEach(o=>{o.onclick=()=>{if(answered)return;answered=true;
-o.classList.add(o.dataset.correct==="true"?"correct":"wrong");
-document.querySelectorAll('.option').forEach(x=>{if(x.dataset.correct==="true")x.classList.add("correct");x.classList.add("disabled");});};});}
-function resetQuiz(){answered=false;document.querySelectorAll('.option').forEach(o=>o.className="option");shuffle();setup();}
-shuffle();setup();
+
+function shuffle(){
+  const block=quiz.querySelector('.answers');
+  [...block.children].sort(()=>Math.random()-0.5).forEach(i=>block.appendChild(i));
+}
+
+quiz.querySelectorAll('.option').forEach(opt=>{
+  opt.onclick=()=>{
+    if(answered)return;
+    answered=true;
+    const correct=opt.dataset.correct==="true";
+    opt.classList.add(correct?"correct":"wrong");
+
+    quiz.querySelectorAll('.option').forEach(o=>{
+      if(o.dataset.correct==="true")o.classList.add("correct");
+      o.classList.add("disabled");
+    });
+  };
+});
+
+quiz.querySelector('.retry').onclick=()=>{
+  answered=false;
+  quiz.querySelectorAll('.option').forEach(o=>{
+    o.className="option";
+  });
+  shuffle();
+};
+
+shuffle();
+});
 </script>
 
 </body>
 </html>
+
+
 
