--- a/station3.html
+++ b/station3.html
@@ -61,13 +61,13 @@ audio{width:100%;}
 
 <!-- ВОПРОС 2 -->
 <section class="quiz">
-<p><b>Какой это тип песни?</b></p>
+<p><b>Кто автор песни?</b></p>
 <audio controls src="audio/karagym-ai.mp3"></audio>
 
 <div class="answers">
   <div class="option" data-correct="true">народная</div>
-  <div class="option" data-correct="false">эстрадная</div>
-  <div class="option" data-correct="false">рок</div>
+  <div class="option" data-correct="false">Құрманғазы</div>
+  <div class="option" data-correct="false">Мухтар Ауэзов</div>
 </div>
 
 <button class="retry">🔁 Попробовать снова</button>
@@ -124,6 +124,7 @@ shuffle();
 
 </body>
 </html>
+
 
 
 
