--- a/station1.html
+++ b/station1.html
@@ -4,46 +4,84 @@
 <meta charset="UTF-8">
 <title>Станция 1</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
 body{font-family:Arial;background:linear-gradient(#f4ecd8,#e2cfa1);padding:15px;}
-section{background:#fffaf0;padding:20px;border-radius:14px;border:3px solid #8b6b3e;}
+.quiz{background:#fffaf0;padding:20px;border-radius:14px;border:3px solid #8b6b3e;margin-bottom:20px;}
 .option{padding:12px;margin:8px 0;border:2px solid #8b6b3e;border-radius:8px;background:#fff;cursor:pointer;}
-.option.correct{background:#c7e3b3;border-color:#2e7d32;}
-.option.wrong{background:#f4bcbc;border-color:#b71c1c;}
-.option.disabled{pointer-events:none;opacity:.85;}
-.retry{margin-top:15px;padding:12px;width:100%;border:none;border-radius:10px;background:#d8c48a;font-size:16px;}
+.option.correct{background:#c7e3b3;}
+.option.wrong{background:#f4bcbc;}
+.option.disabled{pointer-events:none;}
+.retry{margin-top:10px;padding:10px;width:100%;background:#d8c48a;border:none;border-radius:10px;}
 </style>
 </head>
+
 <body>
 
-<section>
-<h2>🗿 Станция 1. Камень степи</h2>
-<p>Расшифруй древний знак:</p>
+<h2>🗿 Станция 1. Руны степи</h2>
 
-<div style="font-size:34px;text-align:center;margin:15px 0;">ᚴAᛉAᚴ</div>
-
+<section class="quiz">
+<p><b>ᚴAᛉAᚴ означает:</b></p>
 <div class="answers">
   <div class="option" data-correct="true">ҚАЗАҚ</div>
-  <div class="option" data-correct="false">ҚАЗАҚСТАН</div>
   <div class="option" data-correct="false">ТҮРКІ</div>
+  <div class="option" data-correct="false">ҚАЗАҚСТАН</div>
 </div>
+<button class="retry">🔁 Попробовать снова</button>
+</section>
 
-<button class="retry" onclick="resetQuiz()">🔁 Попробовать снова</button>
+<section class="quiz">
+<p><b>ᛏIL означает:</b></p>
+<div class="answers">
+  <div class="option" data-correct="true">ТІЛ</div>
+  <div class="option" data-correct="false">ЕЛ</div>
+  <div class="option" data-correct="false">ЖЕР</div>
+</div>
+<button class="retry">🔁 Попробовать снова</button>
+</section>
+
+<section class="quiz">
+<p><b>ᛗᚨᛞEᚾIET означает:</b></p>
+<div class="answers">
+  <div class="option" data-correct="true">МӘДЕНИЕТ</div>
+  <div class="option" data-correct="false">ТАРИХ</div>
+  <div class="option" data-correct="false">ЕЛ</div>
+</div>
+<button class="retry">🔁 Попробовать снова</button>
 </section>
 
 <script>
+document.querySelectorAll('.quiz').forEach(quiz=>{
 let answered=false;
-function shuffle(){document.querySelectorAll('.answers').forEach(b=>{[...b.children].sort(()=>Math.random()-0.5).forEach(i=>b.appendChild(i));});}
-function setup(){
-document.querySelectorAll('.option').forEach(o=>{
-o.onclick=()=>{if(answered)return;answered=true;
-o.classList.add(o.dataset.correct==="true"?"correct":"wrong");
-document.querySelectorAll('.option').forEach(x=>{if(x.dataset.correct==="true")x.classList.add("correct");x.classList.add("disabled");});
-};});}
-function resetQuiz(){answered=false;document.querySelectorAll('.option').forEach(o=>o.className="option");shuffle();setup();}
-shuffle();setup();
+
+function shuffle(){
+  const a=quiz.querySelector('.answers');
+  [...a.children].sort(()=>Math.random()-0.5).forEach(i=>a.appendChild(i));
+}
+
+quiz.querySelectorAll('.option').forEach(opt=>{
+  opt.onclick=()=>{
+    if(answered)return;
+    answered=true;
+    opt.classList.add(opt.dataset.correct==="true"?"correct":"wrong");
+    quiz.querySelectorAll('.option').forEach(o=>{
+      if(o.dataset.correct==="true")o.classList.add("correct");
+      o.classList.add("disabled");
+    });
+  };
+});
+
+quiz.querySelector('.retry').onclick=()=>{
+  answered=false;
+  quiz.querySelectorAll('.option').forEach(o=>o.className="option");
+  shuffle();
+};
+
+shuffle();
+});
 </script>
 
 </body>
 </html>
+
 
