--- a/station2.html
+++ b/station2.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Станция 2</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
 body{font-family:Arial;background:linear-gradient(#f4ecd8,#e2cfa1);padding:15px;}
 .quiz{background:#fffaf0;padding:20px;border-radius:14px;border:3px solid #8b6b3e;margin-bottom:20px;}
@@ -19,8 +20,8 @@ body{font-family:Arial;background:linear-gradient(#f4ecd8,#e2cfa1);padding:15px;
 
 <h2>💻 Станция 2. Язык XXI века</h2>
 
-<section class="quiz" data-qid="s2q1">
-<p><b>Смартфон — это:</b></p>
+<section class="quiz">
+<p><b>Что означает слово «Смартфон»?</b></p>
 <div class="answers">
   <div class="option" data-correct="true">ұялы телефон</div>
   <div class="option" data-correct="false">әлеуметтік желі</div>
@@ -29,18 +30,18 @@ body{font-family:Arial;background:linear-gradient(#f4ecd8,#e2cfa1);padding:15px;
 <button class="retry">🔁 Попробовать снова</button>
 </section>
 
-<section class="quiz" data-qid="s2q2">
-<p><b>Блогер — это:</b></p>
+<section class="quiz">
+<p><b>Что означает слово «Блогер»?</b></p>
 <div class="answers">
   <div class="option" data-correct="true">желі қолданушы</div>
-  <div class="option" data-correct="false">онлайн дүкен</div>
   <div class="option" data-correct="false">ұялы телефон</div>
+  <div class="option" data-correct="false">онлайн дүкен</div>
 </div>
 <button class="retry">🔁 Попробовать снова</button>
 </section>
 
-<section class="quiz" data-qid="s2q3">
-<p><b>Стартап — это:</b></p>
+<section class="quiz">
+<p><b>Что означает слово «Стартап»?</b></p>
 <div class="answers">
   <div class="option" data-correct="true">кәсіп бастамасы</div>
   <div class="option" data-correct="false">әлеуметтік желі</div>
@@ -50,48 +51,37 @@ body{font-family:Arial;background:linear-gradient(#f4ecd8,#e2cfa1);padding:15px;
 </section>
 
 <script>
-let score = Number(localStorage.getItem("score") || 0);
-let solved = JSON.parse(localStorage.getItem("solved") || "{}");
-
 document.querySelectorAll('.quiz').forEach(quiz=>{
-  let answered=false;
-  const qid=quiz.dataset.qid;
+let answered=false;
 
-  function shuffle(){
-    const a=quiz.querySelector('.answers');
-    [...a.children].sort(()=>Math.random()-0.5).forEach(i=>a.appendChild(i));
-  }
+function shuffle(){
+  const a=quiz.querySelector('.answers');
+  [...a.children].sort(()=>Math.random()-0.5).forEach(i=>a.appendChild(i));
+}
 
-  quiz.querySelectorAll('.option').forEach(opt=>{
-    opt.onclick=()=>{
-      if(answered)return;
-      answered=true;
-      const correct=opt.dataset.correct==="true";
-      opt.classList.add(correct?"correct":"wrong");
-
-      quiz.querySelectorAll('.option').forEach(o=>{
-        if(o.dataset.correct==="true")o.classList.add("correct");
-        o.classList.add("disabled");
-      });
-
-      if(correct && !solved[qid]){
-        solved[qid]=true;
-        score++;
-        localStorage.setItem("score",score);
-        localStorage.setItem("solved",JSON.stringify(solved));
-      }
-    };
-  });
-
-  quiz.querySelector('.retry').onclick=()=>{
-    answered=false;
-    quiz.querySelectorAll('.option').forEach(o=>o.className="option");
-    shuffle();
+quiz.querySelectorAll('.option').forEach(opt=>{
+  opt.onclick=()=>{
+    if(answered)return;
+    answered=true;
+    opt.classList.add(opt.dataset.correct==="true"?"correct":"wrong");
+    quiz.querySelectorAll('.option').forEach(o=>{
+      if(o.dataset.correct==="true")o.classList.add("correct");
+      o.classList.add("disabled");
+    });
   };
+});
 
+quiz.querySelector('.retry').onclick=()=>{
+  answered=false;
+  quiz.querySelectorAll('.option').forEach(o=>o.className="option");
   shuffle();
+};
+
+shuffle();
 });
 </script>
 
 </body>
 </html>
+
+
